# portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  IMAGES.md  README.md  bun.lockb  eslint.config.mjs  package.json  requirements.txt  ruff.toml  sonar-project.properties  strategy.config.yaml  tsconfig.json  turbo.json  vercel.json
.github/: README.md  (+1 more)
ai-discord-bot/: .env.example  README.md  pyproject.toml
ai-discord-bot/migrations/: 001_agent_conversations.sql
ai-discord-bot/src/ai_discord_bot/: __init__.py  config.py  main.py
ai-discord-bot/src/ai_discord_bot/agents/: market_agent.py  narrative_agent.py  orchestrator.py  portfolio_agent.py  signals_agent.py  system_prompts.py
ai-discord-bot/src/ai_discord_bot/bot/: client.py  formatter.py
ai-discord-bot/src/ai_discord_bot/memory/: supabase_memory.py
ai-discord-bot/src/ai_discord_bot/scheduling/: brief_scheduler.py
ai-discord-bot/src/ai_discord_bot/tools/: __init__.py  calc_tools.py  db.py  market_tools.py  portfolio_tools.py  signals_tools.py
analyze-options-service/: README.md  pyproject.toml
analyze-options-service/src/analyze_options/: __init__.py  cli.py  config.py  fetcher.py  ml_client.py
analyze-options-service/src/analyze_options/analyzers/: __init__.py  entry_timing.py  naked_analyzer.py  signal_filter.py  signal_qa.py  spread_analyzer.py  strategy_recommender.py  technical_filter.py  validation_checklist.py
analyze-options-service/src/analyze_options/data/: __init__.py  market_data.py  supabase_client.py
analyze-options-service/src/analyze_options/models/: __init__.py  analysis.py  recommendation.py  signal.py  strategy.py
call-debit-spread-finder/: README.md  pyproject.toml
call-debit-spread-finder/src/cds_finder/: __init__.py  cli.py  config.py
call-debit-spread-finder/src/cds_finder/analyzers/: __init__.py  composite.py  fundamental.py  options.py  signal_correlation.py  technical.py
call-debit-spread-finder/src/cds_finder/data/: __init__.py  market_data.py  signal_fetcher.py
call-debit-spread-finder/src/cds_finder/models/: __init__.py  analysis.py  opportunity.py  signal.py
call-debit-spread-finder/src/cds_finder/strategies/: call_debit_spread.py
call-debit-spread-finder/src/cds_finder/utils/: __init__.py  formatters.py  logger.py
lib/py-core/: README.md  pyproject.toml
lib/py-core/portfolio_core/: __init__.py  config.py  database.py  logging.py  utils.py
ml-options-predictor/: MODEL_DEGRADATION_ALERT.md  README.md  TRADING_GUIDE.md  pyproject.toml
ml-options-predictor/config/: config.yml
ml-options-predictor/data/labeled/: labeled_signals.parquet
ml-options-predictor/models/: model_v20251107_211931.pkl  model_v20251110_141418.pkl.BAD  model_v20251112_135056.pkl
ml-options-predictor/scripts/: monitor_authenticity.py  validate_model.py
ml-options-predictor/src/ml_predictor/: __init__.py  cli.py  config.py
penny-stock-scanner/: .coverage 2  README.md  pyproject.toml
penny-stock-scanner/scripts/: analyze_performance.py  backfill_country_data.py  cleanup_ncf.py  deep_analysis.py  price_analysis.py  recalculate_performance.py
penny-stock-scanner/src/penny_scanner/: __init__.py  cli.py
rds-ticker-analysis/: README.md  env.example  pyproject.toml
rds-ticker-analysis/src/rds_ticker_analysis/: __init__.py  cli.py
rds-ticker-analysis/tests/: __init__.py  conftest.py
rds-ticker-analysis/tests/unit/: test_scoring_service.py
reddit-source/: .env.example  Makefile  README.md  pyproject.toml
reddit-source/db/: rds_data_source_schema.sql  reddit_source_schema.sql
reddit-source/src/: __init__.py
reddit-source/src/app/: run.py
reddit-source/src/config/: __init__.py  settings.py
reddit-source/src/ingest/: __init__.py  models.py  reddit_client.py  simple_models.py
reddit-source/src/processing/: __init__.py  data_quality_filter.py  market_enricher.py  processor.py  smart_ticker_extractor.py  ticker_extractor.py
reddit-source/src/storage/: __init__.py  simple_storage.py  supabase_client.py
unusual-options-service/: .env.example  .gitignore  README.md  pyproject.toml
unusual-options-service/scripts/: README.md  analyze_best_plays.py  analyze_results.py  backfill_spread_detection.py  classification_validator.py  cleanup_database.py  cleanup_noise.py  diagnose_continuity.py  discord_alerts.py  expire_signals.py  flow_divergence.py  hedge_analyzer.py  insider_plays.py  momentum_tracker.py  performance_tracker.py  reactivate_valid_signals.py  signal_correlation.py  trade_sizing.py  validate_spread_detection.py  verify_timezone_data.py
unusual-options-service/scripts/migrations/: 000_create_continuity_table.sql  001_add_classification_fields.sql  002_add_performance_fields.sql
unusual-options-service/src/unusual_options/: __init__.py  cli.py  config.py  storage_helpers.py
unusual-options-service/tests/: __init__.py  conftest.py
volatility-squeeze-scanner/: .gitignore  README.md  migrate_duplicates.py  pyproject.toml
volatility-squeeze-scanner/scripts/: README.md  analyze_klg_continuity.py  analyze_performance.py  backup_volatility_signals_20251003_202634.json  check_database_duplicates.py  clean_signals.py  clean_table.py  cleanup_database.py  cleanup_meaningless_trades.py  export_signals_data.py  fix_duplicate_signals.py  fix_signal_continuity.py  fix_signal_efficiency.sql  simple_continuity_analysis.py
volatility-squeeze-scanner/src/volatility_scanner/: __init__.py  cli.py
volatility-squeeze-scanner/tests/: __init__.py  conftest.py
volatility-squeeze-scanner/tests/unit/: test_analysis_service.py  test_technical_indicators.py
wp-service/: .env.local.example  .gitignore  README.md  config.json  gradgen.py  pyproject.toml  requirements.txt  server.py
wp-service/docs/: README.md
wp-service/src/: __init__.py
wp-service/src/config/: __init__.py  presets.py  settings.py
wp-service/src/core/: __init__.py  base.py
wp-service/src/generators/: __init__.py  fractal.py  linear.py  organic.py  perlin.py  radial.py  wave.py
wp-service/src/utils/: __init__.py  ai_color_gen.py  color_utils.py  quality_validator.py
(+1032 files in other folders)
