[tool.poetry]
name = "ai-discord-bot"
version = "0.1.0"
description = "Local-only Discord bot running on your Mac. Multi-agent architecture via Agno + A2A + local qwen3.6:35b (Ollama). Answers questions about your private financial data and posts a scheduled morning brief."
authors = ["Conor Quinlan <conor@example.com>"]
readme = "README.md"
packages = [{ include = "ai_discord_bot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
agno = "*"
# agno.models.ollama imports from agno.models.openai for response types,
# which requires the `openai` package even though we never hit OpenAI.
openai = ">=1.0"
# Required by agno.os.interfaces.a2a (our AgentOS is booted with a2a_interface=True).
a2a-sdk = ">=0.2"
ollama = ">=0.3,<1.0"
"discord.py" = "^2.4"
supabase = "^2.18"
asyncpg = "^0.29"
apscheduler = "^3.10"
python-dotenv = "^1.1"
httpx = ">=0.27,<1.0"
uvicorn = { extras = ["standard"], version = "^0.30" }
fastapi = "^0.115"
pydantic = "^2.5"
pydantic-settings = "^2.1"
loguru = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
ruff = "^0.8"

[tool.poetry.scripts]
ai-discord-bot = "ai_discord_bot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
