[tool.poetry]
name = "analyze-options-service"
version = "0.1.0"
description = "Analyze unusual options signals and generate trade recommendations"
authors = ["Conor Quinlan"]
readme = "README.md"
packages = [{include = "analyze_options", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
rich = "^13.7.0"
typer = {version = "^0.12.0", extras = ["all"]}
supabase = ">=2.7.0,<2.8.0"
gotrue = ">=2.8.0,<2.9.0"
httpx = "^0.25.0"
yfinance = "^0.2.32"
pandas = "^2.1.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
ta = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[tool.poetry.scripts]
analyze = "analyze_options.cli:app"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

