[tool.poetry]
name = "ml-options-predictor"
version = "0.1.0"
description = "Machine learning service for predicting unusual options signal profitability"
authors = ["Portfolio Team"]
readme = "README.md"
packages = [{include = "ml_predictor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
pyarrow = "^14.0.0"
supabase = ">=2.7.0,<2.8.0"
gotrue = "2.8.1"
yfinance = "^0.2.32"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
httpx = "^0.25.0"
pyyaml = "^6.0.1"
joblib = "^1.3.0"
optuna = "^3.4.0"
apscheduler = "^3.10.4"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
ruff = "^0.1.0"
mypy = "^1.6.0"

[tool.poetry.scripts]
ml-predict = "ml_predictor.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

