[tool.poetry]
name = "rds-ticker-analysis"
version = "0.1.0"
description = "Enterprise-grade Reddit-based ticker sentiment analysis for stock buying opportunities"
authors = ["Conor Quinlan"]
readme = "README.md"
packages = [{include = "rds_ticker_analysis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.10.1"
httpx = "^0.27.0"
typer = "^0.12.0"

# Data processing
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
pyarrow = "^17.0.0"

# Financial data
yfinance = "^0.2.0"
supabase = "^2.7.0"

# Reddit API and text processing
praw = "^7.7.1"
nltk = "^3.9.0"
textblob = "^0.18.0"
vaderSentiment = "^3.3.2"
spacy = "^3.7.0"

# AI services
openai = "^1.3.7"
anthropic = "^0.7.8"

# Database
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
asyncpg = "^0.29.0"

# Caching and queuing
redis = "^5.0.1"
celery = "^5.3.4"

# Logging and monitoring
loguru = "^0.7.2"
rich = "^13.7.0"
structlog = "^23.2.0"

# Utilities
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
schedule = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
rds-ticker-analysis = "rds_ticker_analysis.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", 
    "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", 
    "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", 
    "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"
]
ignore = [
    "ANN101", "ANN102", "S101", "PLR0913", "PLR0912", "PLR0915",
    "PLR2004", "PLR0917", "TRY003"
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN201", "ANN001"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--cov=rds_ticker_analysis",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
    "reddit_api: Tests requiring Reddit API",
    "openai_api: Tests requiring OpenAI API"
]
