[tool.poetry]
name = "reddit-source"
version = "0.1.0"
description = "Enterprise-grade Reddit data source for financial sentiment analysis"
authors = ["Conor Quinlan"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.8.0"
pandas = "^2.2.0"
supabase = "^2.7.0"
paddleocr = "^2.7.0"
opencv-python = "^4.10.0"
open-clip-torch = "^2.24.0"
transformers = "^4.44.0"
torch = "^2.4.0"
spacy = "^3.7.0"
typer = "^0.12.0"
streamlit = "^1.37.0"
imagehash = "^4.3.0"
python-dotenv = "^1.0.0"
yfinance = "^0.2.0"
pyarrow = "^17.0.0"
ruff = "^0.6.0"
black = "^24.8.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pillow = "^10.4.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
nltk = "^3.9.0"
textblob = "^0.18.0"
pydantic-settings = "^2.10.1"

[tool.poetry.scripts]
reddit-source = "src.app.run:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "PLR0913", "PLR0912", "PLR0915"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN201", "ANN001"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
