[tool.poetry]
name = "unusual-options-service"
version = "0.1.0"
description = "Unusual options activity detection for trading signals"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "unusual_options", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
rich = "^13.7.0"
supabase = ">=2.7.0,<2.8.0"
httpx = "^0.25.0"
pydantic = "^2.5.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
yfinance = "^0.2.32"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
gotrue = ">=2.8.0,<2.9.0"
openai = "^1.3.0"
aiohttp = "^3.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.8.0"
mypy = "^1.7.0"

[tool.poetry.scripts]
unusual-options = "unusual_options.cli:cli"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Note: "I" (isort) excluded due to sys.path manipulation before local imports
select = ["E", "F", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

