[tool.poetry]
name = "volatility-squeeze-scanner"
version = "0.1.0"
description = "Enterprise-grade volatility squeeze scanner for equity and ETF analysis"
authors = ["Conor Quinlan <conor@example.com>"]
readme = "README.md"
packages = [{include = "volatility_scanner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
yfinance = "^0.2.28"
pandas = "^2.1.4"
numpy = "^1.26.2"
# ta-lib = "^0.4.28"  # Optional - can be installed separately if needed
scikit-learn = "^1.3.2"
openai = "^1.3.7"
anthropic = "^0.7.8"
httpx = "^0.26.0"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
rich = "^13.7.0"
typer = "^0.9.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
supabase = "^2.18.1"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
httpx = "^0.26.0"

[tool.poetry.scripts]
volatility-scanner = "volatility_scanner.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["volatility_scanner"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=volatility_scanner",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
