[tool.poetry]
name = "wp-service"
version = "0.1.0"
description = "Wallpaper and gradient generation service"
authors = ["Conor Quinlan"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26.0"
scipy = ">=1.11.1"
Pillow = ">=10.0.0"
click = ">=8.0.0"
tqdm = ">=4.60.0"
openai = ">=1.0.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.7.0"
pytest = "^7.4.0"

[tool.poetry.scripts]
wp-service = "src.gradgen:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

